--- a/.conda-env/environment.yml
+++ b/.conda-env/environment.yml
@@ -77,12 +77,34 @@ dependencies:
   - torchaudio=2.0.0=py310_cpu
   - torchvision=0.15.0=py310_cpu
   - typing_extensions=4.4.0=py310h06a4308_0
-  - tzdata=2022g=h04d1e81_0
   - urllib3=1.26.14=py310h06a4308_0
   - wheel=0.38.4=py310h06a4308_0
   - xz=5.2.10=h5eee18b_1
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.2=ha4553b6_0
   - pip:
+      - contourpy==1.0.7
+      - cycler==0.11.0
+      - fonttools==4.39.3
+      - gitdb==4.0.10
+      - gitpython==3.1.31
+      - kiwisolver==1.4.4
+      - matplotlib==3.7.1
       - mpmath==1.2.1
+      - opencv-python==4.7.0.72
+      - packaging==23.1
+      - pandas==2.0.0
+      - psutil==5.9.5
+      - pyparsing==3.0.9
+      - python-dateutil==2.8.2
+      - pytz==2023.3
+      - pyyaml==6.0
+      - scipy==1.10.1
+      - seaborn==0.12.2
+      - sentry-sdk==1.19.1
+      - smmap==5.0.0
+      - thop==0.1.1-2209072238
+      - tqdm==4.65.0
+      - tzdata==2023.3
+      - ultralytics==8.0.81
 prefix: /home/dhuber/.miniconda3/envs/deep-learning
